--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -1,19 +1,21 @@
 import pandas as pd
 metadata = pd.read_csv("resources/metadata.csv", dtype={'subject_id': str})
-TRACTSEG_LICENSE = "aca_3HHRRAITHIDYWI"
+TOTALSEGMENTATOR_LICENSE = "aca_3HHRRAITHIDYWI"
 VERTEBRAL_LEVELS = [
     "C1", "C2", "C3", "C4", "C5", "C6", "C7", 
     "T1", "T2", "T3", "T4", "T5", "T6", "T7", "T8", "T9", "T10", "T11", "T12", 
     "L1", "L2", "L3", "L4", "L5"]
 
-
+wildcard_constraints:
+    subject_id="[^/]+",
+    sequence="[^/]+"
 rule run_muscle_segmentation_standard:
     input:
         mr_scan = "resources/{subject_id}/{sequence}.nii.gz"
     output:
         directory("results/{subject_id}/{sequence}/segmentations")
     params:
-        license = TRACTSEG_LICENSE
+        license = TOTALSEGMENTATOR_LICENSE
     singularity:
         "docker://wasserth/totalsegmentator:2.5.0"
     shell:
@@ -145,6 +147,23 @@ rule calculate_muscle_area_mid_l3:
         vertebral_segmentation = "results/{subject_id}/water/segmentations_vertebrae_combined.nii.gz"
     output:
         muscle_area = "results/{subject_id}/{sequence}/mid_l3_surface_area.json"
+    wildcard_constraints:
+        sequence="water|fat|ip|oop"
+    conda:
+        "envs/nibabel.yaml"
+    script:
+        "scripts/calculate_muscle_area_mid_l3.py"
+
+rule calculate_muscle_area_mid_l3_ensemble:
+    input:
+        water = "resources/{subject_id}/water.nii.gz",
+        fat = "resources/{subject_id}/fat.nii.gz",
+        muscle_segmentation = "results/{subject_id}/{sequence}/segmentations/skeletal_muscle.nii.gz",
+        vertebral_segmentation = "results/{subject_id}/water/segmentations_vertebrae_combined.nii.gz"
+    output:
+        muscle_area = "results/{subject_id}/{sequence}/mid_l3_surface_area.json"
+    wildcard_constraints:
+        sequence="water_oop_ensemble|all_ensemble"
     conda:
         "envs/nibabel.yaml"
     script:
@@ -165,8 +184,8 @@ rule visualize_mid_l3:
         water_oop_ensemble = "results/{subject_id}/water_oop_ensemble/segmentations/skeletal_muscle.nii.gz",
         all_ensemble = "results/{subject_id}/all_ensemble/segmentations/skeletal_muscle.nii.gz"
     output:
-        segmentation = "results/{subject_id}_mid_l3_segmentation.pdf",
-        fat_fraction = "results/{subject_id}_mid_l3_fat_fraction.pdf"
+        segmentation = "results/{subject_id}_mid_l3_segmentation.png",
+        fat_fraction = "results/{subject_id}_mid_l3_fat_fraction.png"
     params:
         height = lambda wildcards: metadata[metadata["subject_id"] == wildcards.subject_id]["height"].values[0]
     conda:
@@ -174,6 +193,17 @@ rule visualize_mid_l3:
     script:
         "scripts/visualize_mid_l3.py"
 
+rule visualize_l3_level_single_slice_ensemble:
+    input:
+        raw_fat = "resources/{subject_id}/fat.nii.gz",
+        vertebral_segmentations = "results/{subject_id}/water/segmentations_vertebrae_combined.nii.gz",
+        all_ensemble = "results/{subject_id}/all_ensemble/segmentations/skeletal_muscle.nii.gz"
+    output:
+        simple_viz = "results/{subject_id}_l3_level_single_slice_ensemble.png"
+    conda:
+        "envs/nibabel.yaml"
+    script:
+        "scripts/l3_level_single_slice_ensemble.py"
 
 rule calculate_all_muscle_segmentations_for_all_patients:
     input:
@@ -210,7 +240,7 @@ rule calculate_volume_and_fat_fraction_between_L1_and_L3:
     input:
         muscle_segmentation = "results/{subject_id}/{sequence}/segmentations/skeletal_muscle.nii.gz",
         start_segmentation = "results/{subject_id}/water/segmentations_vertebrae_level/vertebrae_L3.nii.gz",
-        end_segmentation = "results/{subject_id}/water/segmentations_vertebrae_level/vertebrae_L1.nii.gz",
+        end_segmentation = "results/{subject_id}/water/segmentations_vertebrae_level/vertebrae_T9.nii.gz",
         ip_image = "resources/{subject_id}/fat.nii.gz",
         oop_image = "resources/{subject_id}/water.nii.gz"
     output:
@@ -224,15 +254,50 @@ rule calculate_volume_and_fat_fraction_between_L1_and_L3:
 
 rule combine_volumes_and_areas_for_all_patients:
     input:
-        volumes = expand("results/{subject_id}/{sequence}/volumes_between_L1_and_L3.json", subject_id=metadata["subject_id"], sequence=["water", "fat", "ip", "oop"]),
-        areas = expand("results/{subject_id}/{sequence}/mid_l3_surface_area.json", subject_id=metadata["subject_id"], sequence=["water", "fat", "ip", "oop"])
+        volumes = expand("results/{subject_id}/{sequence}/volumes_between_L1_and_L3.json", subject_id=metadata["subject_id"], sequence=["water", "fat", "ip", "oop", "all_ensemble", "water_oop_ensemble"]),
+        areas = expand("results/{subject_id}/{sequence}/mid_l3_surface_area.json", subject_id=metadata["subject_id"], sequence=["water", "fat", "ip", "oop", "all_ensemble", "water_oop_ensemble"])
     params:
         metadata = metadata
     output:
-        "results/volumes_and_areas.json"
+        json = "results/volumes_and_areas.json",
+        csv = "results/volumes_and_areas.csv"
     script:
         "scripts/combine_areas_and_volumes.py"
 
+rule generate_analysis_report:
+    input:
+        csv = "results/volumes_and_areas.csv"
+    output:
+        report = "results/analysis.pdf"
+    script:
+        "scripts/analysis.Rmd"
+
+rule get_all_results:
+    input:
+        report = "results/analysis.pdf",
+        plots_segmentation = expand("results/{subject_id}_mid_l3_segmentation.png", subject_id=metadata["subject_id"]),
+        plots_fat_fractions = expand("results/{subject_id}_mid_l3_fat_fraction.png", subject_id=metadata["subject_id"]),
+        plots_single_slice_ensemble = expand("results/{subject_id}_l3_level_single_slice_ensemble.png", subject_id=metadata["subject_id"])
+    output:
+        report = directory("results/final/analysis"),
+        plots_segmentation = directory("results/final/segmentation_plots"),
+        plots_fat_fractions = directory("results/final/fat_fraction_plots"),
+        plots_single_slice_ensemble = directory("results/final/single_slice_ensemble_plots")
+    shell:
+        """
+        mkdir -p {output.report} {output.plots_segmentation} {output.plots_fat_fractions} {output.plots_single_slice_ensemble}
+        cp {input.report} {output.report}/
+        cp {input.plots_segmentation} {output.plots_segmentation}/
+        cp {input.plots_fat_fractions} {output.plots_fat_fractions}/
+        cp {input.plots_single_slice_ensemble} {output.plots_single_slice_ensemble}/
+        """
+
+rule all:
+    input:
+        "results/final/analysis.pdf"
+
+
+# TODO: Actually implement this
 rule display_segmentations_muscles_vertebrae:
     input:
         raw_file = "resources/{subject_id}/{sequence}.nii.gz",
