--- a/workflow/Snakefile
+++ b/workflow/Snakefile
@@ -33,7 +33,7 @@ rule run_muscle_segmentation_4_types:
     output:
         directory("results/{subject_id}/{sequence}/segmentations_4_types")
     params:
-        license = TRACTSEG_LICENSE
+        license = TOTALSEGMENTATOR_LICENSE
     singularity:
         "docker://wasserth/totalsegmentator:2.5.0"
     shell:
@@ -51,7 +51,7 @@ rule run_vertebrae_level_segmentation:
     output:
         directory("results/{subject_id}/{sequence}/segmentations_vertebrae_level")
     params:
-        license = TRACTSEG_LICENSE
+        license = TOTALSEGMENTATOR_LICENSE
     singularity:
         "docker://wasserth/totalsegmentator:2.5.0"
     shell:
@@ -69,7 +69,7 @@ rule run_vertebrae_segmentation:
     output:
         directory("results/{subject_id}/{sequence}/segmentations_vertebrae")
     params:
-        license = TRACTSEG_LICENSE
+        license = TOTALSEGMENTATOR_LICENSE
     singularity:
         "docker://wasserth/totalsegmentator:2.5.0"
     shell:
@@ -101,7 +101,7 @@ rule run_body_segmentation:
     output:
         directory("results/{subject_id}/{sequence}/segmentations_body")
     params:
-        license = TRACTSEG_LICENSE
+        license = TOTALSEGMENTATOR_LICENSE
     singularity:
         "docker://wasserth/totalsegmentator:2.5.0"
     shell:
